src/main/resources/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minimal-service-deployment
  labels:
    app: minimal-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: minimal-service
  template:
    metadata:
      labels:
        app: minimal-service
    spec:
      containers:
        - name: minimal-service
          image: 2admi/minimal-service:latest
          ports:
            - containerPort: 8000
          livenessProbe:
            httpGet:
              port: 8000
              path: /health
            initialDelaySeconds: 10
            periodSeconds: 60
          readinessProbe:
            httpGet:
              port: 8000
              path: /health
            initialDelaySeconds: 10
            periodSeconds: 10
