src/main/resources/k8s/app-ingress-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-nginx-controller-metrics
  namespace: ingress-nginx
  labels:
    app.kubernetes.io/name: ingress-nginx
spec:
  ports:
    - name: metrics
      port: 10254
      targetPort: 10254
  selector:
    app.kubernetes.io/name: ingress-nginx
