src/main/resources/k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service-svc
  labels:
    app: user-service
spec:
  selector:
    app: user-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
